--- a/requirements_doc.txt
+++ b/requirements_doc.txt
@@ -8,3 +8,5 @@
 4. ARIMA method for now
 5. Buy how much, sell all
 	Connected to Req 2: Throw error if not enough
+6. Will implement a stop loss function
+
